@@ -273,7 +273,11 @@ public class ThreadGroup extends AbstractThreadGroup {
         JMeterThread jmThread = makeThread(engine, this, notifier, groupNumber, threadNum, cloneTree(threadGroupTree), variables);
         scheduleThread(jmThread, now); // set start and end time
         jmThread.setInitialDelay(delay);
-        Thread newThread = new Thread(jmThread, jmThread.getThreadName());
+//        Thread newThread = new Thread(jmThread, jmThread.getThreadName());
+        Thread newThread = Thread.ofVirtual().unstarted(jmThread);
+        jmThread.setThreadName(jmThread.getThreadName() + " (virtual)");
+        newThread.setName(jmThread.getThreadName());
+
         registerStartedThread(jmThread, newThread);
         newThread.start();
         return jmThread;
@@ -587,7 +591,11 @@ public class ThreadGroup extends AbstractThreadGroup {
                         jmThread.setScheduled(true);
                         jmThread.setEndTime(endtime);
                     }
-                    Thread newThread = new Thread(jmThread, jmThread.getThreadName());
+//                    Thread newThread = new Thread(jmThread, jmThread.getThreadName());
+                    Thread newThread = Thread.ofVirtual().unstarted(jmThread);
+                    jmThread.setThreadName(jmThread.getThreadName() + " (virtual)");
+                    newThread.setName(jmThread.getThreadName());
+
                     newThread.setDaemon(false); // ThreadStarter is daemon, but we don't want sampler threads to be so too
                     registerStartedThread(jmThread, newThread);
                     newThread.start();
